--- a/app/src/main/res/layout/activity_custom.xml
+++ b/app/src/main/res/layout/activity_custom.xml
@@ -3,40 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     android:orientation="vertical"
     tools:context="com.example.bodzio.doctorapp.AddPatient">
 
 
     <TextView
         android:id="@+id/textName"
-        android:layout_width="170dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignBottom="@+id/userIcon"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
         android:layout_toRightOf="@+id/userIcon"
-        android:text="Sarah"
+        android:text="Sarah Smith"
         android:textAlignment="textStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="22sp" />
+        android:textSize="18dp" />
 
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/user_icon" />
-
-    <TextView
-        android:id="@+id/textSurname"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textName"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textName"
-        android:text="Smith"
-        android:textSize="22sp" />
+        android:src="@drawable/ic_person_black_24dp" />
 </RelativeLayout>
 
 
