--- a/app/src/main/res/layout/activity_custom_visit.xml
+++ b/app/src/main/res/layout/activity_custom_visit.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     android:orientation="vertical"
     tools:context="com.example.bodzio.doctorapp.AddPatient">
 
@@ -13,11 +14,11 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/userIcon"
         android:layout_toEndOf="@+id/userIcon"
-        android:layout_toStartOf="@+id/textHour"
         android:text="Sarah Smith"
         android:textAlignment="viewStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="20sp" />
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
 
     <TextView
@@ -26,19 +27,18 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/userIcon"
         android:layout_toEndOf="@+id/userIcon"
-        android:layout_toStartOf="@+id/textHour"
         android:text="12 : 12"
         android:textAlignment="textStart"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="20sp" />
+        android:textSize="18dp" />
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/user_icon" />
+        android:src="@drawable/ic_person_yellow_24dp" />
 
 </RelativeLayout>
 
