--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="backgroundcolor">#ffffff</color>
     <color name="lightgray">#ffffff</color>
     <color name="deeppurple">#7c4dff</color>
-    <color name="yello">#ffb300</color>
+    <color name="yellow">#ffb300</color>
     <color name="green">#00bfa5</color>
     <color name="darkblue">#23283a</color>
     <color name="testcolorblue">#152b38</color>
